# ShardedBayesianAdditiveRegressionTrees

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README_openBT.md  ambrt.cpp  ambrt.h  brt.cpp  brt.h  brtfuns.cpp  brtfuns.h  calibrate.cpp  cli.cpp  config.status  configure  dinfo.h  emulate.cpp  example.R  influence.cpp  lebrt.cpp  lebrt.h  lebrt.lo  libambrt.la  libbrt.la  libcrn.la  liblebrt.la  libmbrt.la  libpsbrt.la  libsbrt.la  libsinglebinomial.la  libsinglepoisson.la  libtool  libtree.la  mbrt.cpp  mbrt.h  mopareto.cpp  openbt.R  openbtcalibrate  openbtcli  (+22 more)
experiment/: run_bigBatchBART.R  run_bigBatchBART_redshift.R  run_branin.sh  run_fried.sh  run_redshift.sh  shardeg.R
experiment/branin/: x10000p15_99.csv  x10000p2_99.csv  x1000p15_99.csv  x1000p2_99.csv  x100p15_99.csv  x100p2_99.csv  xp10000p15_99.csv  xp10000p2_99.csv  xp1000p15_99.csv  xp1000p2_99.csv  xp100p15_99.csv  xp100p2_99.csv  y10000p15_99.csv  y1000p2_99.csv  y100p15_99.csv  yp10000p15_99.csv  yp10000p2_99.csv  yp1000p15_99.csv  yp1000p2_99.csv  yp100p15_99.csv  yp100p2_99.csv
experiment/fried/: fried_x5000p20_99.csv  fried_x5000p5_99.csv  fried_xp5000p20_99.csv  fried_xp5000p5_99.csv  fried_y5000p1000_99.csv  fried_yp5000p1000_99.csv  fried_yp5000p100_99.csv  fried_yp5000p20_99.csv  fried_yp5000p5_99.csv
experiment/redshift/: redshift_x_test_0.001smallp7_99.csv  redshift_x_test_0.005smallp7_99.csv  redshift_x_test_0.010smallp7_99.csv  redshift_x_test_0.050smallp7_99.csv  redshift_x_test_0.100smallp7_99.csv  redshift_x_train_0.001smallp7_99.csv  redshift_x_train_0.005p7_99.csv  redshift_x_train_0.005smallp7_99.csv  redshift_x_train_0.010p7_99.csv  redshift_x_train_0.010smallp7_99.csv  redshift_x_train_0.050p7_99.csv  redshift_x_train_0.050smallp7_99.csv  redshift_x_train_0.100smallp7_99.csv  redshift_y_test_0.001smallp7_99.csv  redshift_y_test_0.005smallp7_99.csv  redshift_y_test_0.010smallp7_99.csv  redshift_y_test_0.050smallp7_99.csv  redshift_y_test_0.100smallp7_99.csv  redshift_y_test_0.150smallp7_99.csv  redshift_y_test_0.200smallp7_99.csv  redshift_y_test_0.250smallp7_99.csv  redshift_y_train_0.001smallp7_99.csv  redshift_y_train_0.005p7_99.csv  redshift_y_train_0.005smallp7_99.csv  redshift_y_train_0.010p7_99.csv  redshift_y_train_0.010smallp7_99.csv  redshift_y_train_0.050p7_99.csv  redshift_y_train_0.050smallp7_99.csv  redshift_y_train_0.100smallp7_99.csv  redshift_y_train_0.150smallp7_99.csv  redshift_y_train_0.200smallp7_99.csv  redshift_y_train_0.250smallp7_99.csv
